did some styling (not final) for the signup page and put some missing navigation anchors

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -61,8 +61,12 @@
     }
 }
 
+.main {
+    min-height: 90vh;
+}
+
 .footer {
-    position: absolute;
+    position: static;
     bottom: 0;
     display: flex;
     justify-content: center;
