--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -79,7 +79,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
     height: 3.5vw;
 }
