--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,6 +15,7 @@
 .logo_greetings {
   font-size: 1.1rem;
   max-width: 90vw;
+  height: auto;
 }
 
 .buttons_wrapper {
@@ -32,6 +33,7 @@
 
 .illustration {
   height: 51vh;
+  width: auto;
   overflow: hidden;
 }
 
