did some css'ing for the pet card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --white-bg-color: #FFFFFF;
-  --grey-bg-color: #F6F6F6;
+  --gray-bg-color: #F6F6F6;
+  --gray-text-color: #737380;
   --blue-color: #2359d8;
   --accent-color: #36D6AD;
   --orange-color: #FC7071;
