--- a/src/app/home/styles.module.css
+++ b/src/app/home/styles.module.css
@@ -31,7 +31,8 @@
     align-items: center;
     justify-content: center;
     justify-items: center;
-    background-color: var(--grey-bg-color);
+    background-color: var(--gray-bg-color);
+    color: var(--gray-text-color);
 }
 
 .card_img {
@@ -41,3 +42,45 @@
     border-radius: 15px;
     display: inline-block;
 }
+
+.card_info {
+    height: 90%;
+    padding: 0 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card_name {
+    color: var(--blue-color);
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.card_basic_info {
+    display: flex;
+    flex-direction: column;
+}
+
+.card_address_sect {
+    display: flex;
+    flex-direction: column;
+    row-gap: 4px;
+}
+
+.card_place {
+    font-size: 1.05rem;
+}
+
+.card_contact_wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 3px;
+}
+
+.card_contact_img {
+    height: 1.7rem;
+    width: auto;
+}
+
+
