--- a/src/app/login/styles.module.css
+++ b/src/app/login/styles.module.css
@@ -1,10 +1,10 @@
 .main {
-    background-color: var(--grey-bg-color);
+    background-color: var(--gray-bg-color);
     width: 50vw;
     height: 70vh;
     margin: auto;
     border-radius: 30px;
-    border: 3px solid grey;
+    border: 3px solid gray;
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
