after a lot more pain than necessary I finished the profile style and structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
   --white-bg-color: #FFFFFF;
   --gray-bg-color: #F6F6F6;
   --gray-text-color: #737380;
+  --dark-gray-color: #575761;
   --blue-color: #2359d8;
   --accent-color: #36D6AD;
   --orange-color: #FC7071;
