--- a/src/components/DefaultPageWrapper/DefaultPageWrapper.module.css
+++ b/src/components/DefaultPageWrapper/DefaultPageWrapper.module.css
@@ -1,6 +1,11 @@
 .main {
     max-width: 80%;
     margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+.main h1 {
+    margin-bottom: 10px;
 }
 
 .content_wrapper {
