added a custom onClick prop to the OrangeButton, put a new button for owners in the home page and changed the header position

--- a/src/app/home/styles.module.css
+++ b/src/app/home/styles.module.css
@@ -1,3 +1,8 @@
+.new_pet_button {
+    display: block;
+    margin: 1rem auto;
+}
+
 .main {
     /* background-color: rgba(255, 0, 0, 0.142); */
     width: 80%;
