--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -97,6 +97,12 @@
     width: 80%;
     border-top-left-radius: 99999px;
     border-top-right-radius: 99999px;
+    
+}
+
+.footer_content a {
+    text-decoration: none;
+    color: black;
 }
 
 @media only screen and (max-width: 992px) {
