--- a/src/app/messages/[other]/styles.module.css
+++ b/src/app/messages/[other]/styles.module.css
@@ -8,7 +8,12 @@
 }
 
 .chatbox {
-    /* background-color: red; */
+    row-gap: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+    overflow-y: scroll;
+    padding-bottom: 0.5rem;
 }
 
 .other_msg, .your_msg {
