--- a/src/app/messages/styles.module.css
+++ b/src/app/messages/styles.module.css
@@ -31,3 +31,9 @@
     text-decoration: none;
     font-weight: bold;
 }
+
+.unread_marker {
+    position: relative;
+    bottom: 20px;
+    left: 5px;
+}
