mark messages as read after opening a conversation

--- a/src/app/messages/styles.module.css
+++ b/src/app/messages/styles.module.css
@@ -33,7 +33,7 @@
 }
 
 .unread_marker {
-    position: relative;
-    bottom: 20px;
-    left: 5px;
+    position: absolute;
+    bottom: 7px;
+    right: 5px;
 }
