made a button to delete an account and added a disclaimer in the messages page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,10 +8,14 @@
   --orange-color: #FC7071;
 }
 
-body {  
+body {
   background-color: var(--white-bg-color);
 }
 
 a {
   text-decoration: none;
+}
+
+* {
+  font-family: var(--font-josefin);
 }
