--- a/src/app/messages/[other]/styles.module.css
+++ b/src/app/messages/[other]/styles.module.css
@@ -98,3 +98,11 @@
 .sendIco:hover {
     height: 85%;
 }
+
+.chat_disclaimer {
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+    font-weight: bold;
+    color: red;
+}
