--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,10 @@
 .disclaimer {
-  position: absolute;
-  top: 2rem;
-  font-size: 1.6rem;
+  display: block;
+  font-size: large;
+  position: relative;
+  top: 0;
+  margin-top: 8px;
+  width: auto;
   font-weight: 600;
   color: red;
   width: 50%;
@@ -46,7 +49,11 @@
   overflow: hidden;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 768px) {
+
+  .main {
+    width: 90vw;
+  }
 
   .buttons_wrapper {
     width: 100%;
@@ -54,6 +61,16 @@
 
   .illustration {
     height: auto;
-    width: 80vw;
+    width: 70vw;
+  }
+
+  .big_logo {
+    width: 100%;
+    height: auto;
+  }
+
+  .disclaimer {
+    font-size: small;
+    width: auto;
   }
 }
