--- a/src/components/NeedsToLogin/NeedsToLogin.module.css
+++ b/src/components/NeedsToLogin/NeedsToLogin.module.css
@@ -5,10 +5,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .main_message {
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 2rem;
+}
+
+@media only screen and (max-width: 768px) {
+    .main_div {
+        height: 60vh;
+    }
 }
