--- a/src/app/messages/[other]/styles.module.css
+++ b/src/app/messages/[other]/styles.module.css
@@ -40,6 +40,7 @@
     display: block;
     margin-bottom: 0.1rem;
     padding-left: 0.2rem;
+    word-break: break-all;
 }
 
 .your_date, .other_date {
