--- a/src/components/DefaultPageWrapper/DefaultPageWrapper.module.css
+++ b/src/components/DefaultPageWrapper/DefaultPageWrapper.module.css
@@ -4,6 +4,19 @@
     margin-bottom: 10px;
 }
 
+@media only screen and (min-width: 768px) {
+    .main {
+        /* margin: 0 auto; */
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .main {
+        
+    }
+}
+
 .main h1 {
     margin-bottom: 10px;
 }
