--- a/src/app/signup/styles.module.css
+++ b/src/app/signup/styles.module.css
@@ -86,6 +86,14 @@
     text-underline-offset: 2px;
 }
 
+.creating_user_msg {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-underline-offset: 2px;
+}
+
 .button {
     width: 10rem;
 }
